--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sarosh Iqbal.",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
@@ -18,6 +19,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "serverless-http": "^3.2.0",
+    "vercel": "^33.0.1"
   }
 }
