--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5001;
-MONGODB_URL = mongodb://localhost:27017/estore;
+MONGO_URI = mongodb+srv://estore:n3Xsxk6HV41wQWab@cluster0.uo6pvfs.mongodb.net/estore;
 JWT_SECRET = mysecret;
